Watch chart appVersion using Renovate
Signed-off-by: Jener Rasmussen <jra@netic.dk>

--- a/charts/jiralert/Chart.yaml
+++ b/charts/jiralert/Chart.yaml
@@ -3,6 +3,7 @@ name: jiralert
 description: A Helm chart for Kubernetes to install jiralert
 type: application
 version: 1.7.2
+# renovate: github-releases=prometheus-community/jiralert
 appVersion: "v1.3.0"
 home: "https://github.com/prometheus-community/jiralert"
 keywords:
