--- a/charts/prom-label-proxy/Chart.yaml
+++ b/charts/prom-label-proxy/Chart.yaml
@@ -3,6 +3,7 @@ name: prom-label-proxy
 description: A proxy that enforces a given label in a given PromQL query.
 type: application
 version: 0.10.2
+# renovate: github-releases=prometheus-community/prom-label-proxy
 appVersion: "v0.11.0"
 home: "https://github.com/prometheus-community/prom-label-proxy"
 keywords:
