--- a/charts/prometheus-blackbox-exporter/Chart.yaml
+++ b/charts/prometheus-blackbox-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 description: Prometheus Blackbox Exporter
 name: prometheus-blackbox-exporter
 version: 9.3.0
+# renovate: github-releases=prometheus/blackbox_exporter
 appVersion: v0.26.0
 kubeVersion: ">=1.21.0-0"
 home: https://github.com/prometheus/blackbox_exporter
