--- a/charts/prometheus-conntrack-stats-exporter/Chart.yaml
+++ b/charts/prometheus-conntrack-stats-exporter/Chart.yaml
@@ -3,6 +3,7 @@ name: prometheus-conntrack-stats-exporter
 description: A Helm chart for conntrack-stats-exporter
 type: application
 version: 0.5.17
+# renovate: github-tags=jwkohnen/conntrack-stats-exporter
 appVersion: v0.4.26
 home: https://github.com/jwkohnen/conntrack-stats-exporter
 sources:
