--- a/charts/prometheus-druid-exporter/Chart.yaml
+++ b/charts/prometheus-druid-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github-releases=opstree/druid-exporter
 appVersion: "v0.11.0"
 description: Druid exporter to monitor druid metrics with Prometheus
 name: prometheus-druid-exporter
