--- a/charts/prometheus-ipmi-exporter/Chart.yaml
+++ b/charts/prometheus-ipmi-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 name: prometheus-ipmi-exporter
 description: This is an IPMI exporter for Prometheus.
 type: application
+# renovate: github-releases=prometheus-community/ipmi_exporter
 version: 0.6.0
 appVersion: "v1.10.0"
 keywords:
