--- a/charts/prometheus-memcached-exporter/Chart.yaml
+++ b/charts/prometheus-memcached-exporter/Chart.yaml
@@ -3,6 +3,7 @@ name: prometheus-memcached-exporter
 description: Prometheus exporter for Memcached metrics
 type: application
 version: 0.4.0
+# renovate: github-releases=prometheus/memcached_exporter
 appVersion: "v0.15.0"
 home: https://github.com/prometheus/memcached_exporter
 sources:
