--- a/charts/prometheus-node-exporter/Chart.yaml
+++ b/charts/prometheus-node-exporter/Chart.yaml
@@ -7,6 +7,7 @@ keywords:
   - exporter
 type: application
 version: 4.44.1
+# renovate: github-releases=prometheus/node_exporter
 appVersion: 1.9.0
 home: https://github.com/prometheus/node_exporter/
 sources:
