--- a/charts/prometheus-pingmesh-exporter/Chart.yaml
+++ b/charts/prometheus-pingmesh-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github-releases=kubeservice-stack/pingmesh-agent
 appVersion: "v1.2.2"
 description: Prometheus Pingmesh Exporter
 home: https://stack.kubeservice.cn/
