--- a/charts/prometheus-pushgateway/Chart.yaml
+++ b/charts/prometheus-pushgateway/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github-releases=prometheus/pushgateway
 appVersion: "v1.11.0"
 description: A Helm chart for prometheus pushgateway
 name: prometheus-pushgateway
