--- a/charts/prometheus-redis-exporter/Chart.yaml
+++ b/charts/prometheus-redis-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github-releases=oliver006/redis_exporter
 appVersion: v1.67.0
 description: Prometheus exporter for Redis metrics
 name: prometheus-redis-exporter
