--- a/charts/prometheus-smartctl-exporter/Chart.yaml
+++ b/charts/prometheus-smartctl-exporter/Chart.yaml
@@ -21,6 +21,7 @@ version: 0.13.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
+# renovate: github-releases=prometheus-community/smartctl_exporter
 appVersion: v0.13.0
 
 home: https://github.com/prometheus-community/smartctl_exporter
