--- a/charts/prometheus-sql-exporter/Chart.yaml
+++ b/charts/prometheus-sql-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 description: Prometheus SQL Exporter
 name: prometheus-sql-exporter
 version: 0.2.2
+# renovate: github-releases=justwatchcom/sql_exporter
 appVersion: v0.5.9
 home: https://github.com/justwatchcom/sql_exporter
 sources:
