--- a/charts/prometheus-stackdriver-exporter/Chart.yaml
+++ b/charts/prometheus-stackdriver-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 description: Stackdriver exporter for Prometheus
 name: prometheus-stackdriver-exporter
 version: 4.8.2
+# renovate: github-releases=prometheus-community/stackdriver_exporter
 appVersion: v0.18.0
 home: https://www.stackdriver.com/
 sources:
