--- a/charts/prometheus-statsd-exporter/Chart.yaml
+++ b/charts/prometheus-statsd-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 name: prometheus-statsd-exporter
 description: A Helm chart for prometheus stats-exporter
 version: 0.15.0
+# renovate: github-releases=prometheus/statsd_exporter
 appVersion: v0.28.0
 home: https://github.com/prometheus/statsd_exporter
 sources:
