--- a/charts/prometheus-systemd-exporter/Chart.yaml
+++ b/charts/prometheus-systemd-exporter/Chart.yaml
@@ -3,6 +3,7 @@ name: prometheus-systemd-exporter
 description: A Helm chart for prometheus systemd-exporter
 type: application
 version: 0.3.0
+# renovate: github-releases=prometheus-community/systemd_exporter
 appVersion: "0.6.0"
 home: https://github.com/prometheus-community/systemd_exporter
 sources:
