--- a/charts/prometheus-windows-exporter/Chart.yaml
+++ b/charts/prometheus-windows-exporter/Chart.yaml
@@ -8,6 +8,7 @@ keywords:
   - exporter
 type: application
 version: 0.9.0
+# renovate: github-releases=prometheus-community/windows_exporter
 appVersion: 0.30.4
 home: https://github.com/prometheus-community/windows_exporter/
 sources:
