--- a/charts/alertmanager-snmp-notifier/Chart.yaml
+++ b/charts/alertmanager-snmp-notifier/Chart.yaml
@@ -6,6 +6,7 @@ sources:
   - https://github.com/maxwo/snmp_notifier
 type: application
 version: 0.4.0
+# renovate: github-releases=maxwo/snmp_notifier
 appVersion: v1.6.0
 keywords:
   - monitoring
