--- a/charts/alertmanager/Chart.yaml
+++ b/charts/alertmanager/Chart.yaml
@@ -7,6 +7,7 @@ sources:
   - https://github.com/prometheus/alertmanager
 type: application
 version: 1.15.2
+# renovate: github-releases=prometheus/alertmanager
 appVersion: v0.28.1
 kubeVersion: ">=1.19.0-0"
 keywords:
