--- a/charts/prometheus-adapter/Chart.yaml
+++ b/charts/prometheus-adapter/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 name: prometheus-adapter
 version: 4.13.0
+# renovate: github-releases=kubernetes-sigs/prometheus-adapter
 appVersion: v0.12.0
 description: A Helm chart for k8s prometheus adapter
 home: https://github.com/kubernetes-sigs/prometheus-adapter
