--- a/charts/prometheus-json-exporter/Chart.yaml
+++ b/charts/prometheus-json-exporter/Chart.yaml
@@ -11,6 +11,7 @@ type: application
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 version: 0.16.0
+# renovate: github-releases=prometheus-community/json_exporter
 appVersion: "v0.7.0"
 home: https://github.com/prometheus-community/json_exporter
 maintainers:
