--- a/charts/prometheus-mongodb-exporter/Chart.yaml
+++ b/charts/prometheus-mongodb-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github-releases=percona/mongodb_exporter
 appVersion: "0.43.1"
 description: A Prometheus exporter for MongoDB metrics
 home: https://github.com/percona/mongodb_exporter
