--- a/charts/prometheus-mysql-exporter/Chart.yaml
+++ b/charts/prometheus-mysql-exporter/Chart.yaml
@@ -3,6 +3,7 @@ description: A Helm chart for prometheus mysql exporter with cloudsqlproxy
 name: prometheus-mysql-exporter
 version: 2.9.1
 home: https://github.com/prometheus/mysqld_exporter
+# renovate: github-releases=prometheus/mysqld_exporter
 appVersion: v0.17.2
 sources:
   - https://github.com/prometheus/mysqld_exporter
