--- a/charts/prometheus-nginx-exporter/Chart.yaml
+++ b/charts/prometheus-nginx-exporter/Chart.yaml
@@ -3,6 +3,7 @@ apiVersion: v2
 description: A Helm chart for NGINX Prometheus Exporter
 name: prometheus-nginx-exporter
 version: 1.0.1
+# renovate: github-releases=nginx/nginx-prometheus-exporter
 appVersion: 1.4.1
 home: https://github.com/nginxinc/nginx-prometheus-exporter
 sources:
