--- a/charts/prometheus-opencost-exporter/Chart.yaml
+++ b/charts/prometheus-opencost-exporter/Chart.yaml
@@ -1,3 +1,4 @@
+# renovate: github-releases=opencost/opencost
 appVersion: 1.108.0
 version: 0.1.2
 deprecated: true
@@ -5,7 +6,7 @@ description: Prometheus OpenCost Exporter
 home: https://github.com/opencost/opencost
 name: prometheus-opencost-exporter
 sources:
-- https://github.com/prometheus-community/opencost_exporter
+- https://github.com/opencost/opencost
 apiVersion: v2
 type: application
 keywords:
