--- a/charts/prometheus-pgbouncer-exporter/Chart.yaml
+++ b/charts/prometheus-pgbouncer-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github-releases=prometheus-community/pgbouncer_exporter
 appVersion: "v0.10.2"
 description: A Helm chart for prometheus pgbouncer-exporter
 name: prometheus-pgbouncer-exporter
