--- a/charts/prometheus-pingdom-exporter/Chart.yaml
+++ b/charts/prometheus-pingdom-exporter/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: prometheus-pingdom-exporter
 version: 3.0.3
+# renoavte: github-releases=kokuwaio/pingdom-exporter
 appVersion: v0.2.2
 home: https://github.com/kokuwaio/pingdom-exporter
 description: A Helm chart for Prometheus Pingdom Exporter
