--- a/charts/prometheus-postgres-exporter/Chart.yaml
+++ b/charts/prometheus-postgres-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github-releases=prometheus-community/postgres_exporter
 appVersion: "v0.17.0"
 description: A Helm chart for prometheus postgres-exporter
 name: prometheus-postgres-exporter
