--- a/charts/prometheus-rabbitmq-exporter/Chart.yaml
+++ b/charts/prometheus-rabbitmq-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 description: Rabbitmq metrics exporter for prometheus
 name: prometheus-rabbitmq-exporter
 version: 2.1.1
+# renovate: github-releases=kbudde/rabbitmq_exporter
 appVersion: 1.0.0
 home: https://github.com/kbudde/rabbitmq_exporter
 sources:
