--- a/charts/prometheus-snmp-exporter/Chart.yaml
+++ b/charts/prometheus-snmp-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 description: Prometheus SNMP Exporter
 name: prometheus-snmp-exporter
 version: 8.0.0
+# renovate: github-releases=prometheus/snmp_exporter
 appVersion: v0.28.0
 home: https://github.com/prometheus/snmp_exporter
 sources:
