--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -128,8 +128,8 @@ ingress:
 
 podAnnotations: {}
 
-extraArgs: []
-#  --history.limit=1000
+extraArgs:
+- "--config.file=/etc/configuration/*.yml"
 
 envFrom: []
 #  - secretRef:
@@ -146,11 +146,17 @@ replicas: 1
 configmapReload:
   ## configmap-reload container name
   ##
+  enabled: true
   name: configmap-reload
-  ## volume name to mount to prometheus-config-reloader. Default "config"
-  ## Can use projected volume name in extraVolumes and mount multiple secrets, configmaps in single volume to watch for changes.
-  ##
-  volumeName: config
+
+  extraArgs: []
+  #- "--watched-dir=/etc/configuration"
+
+  #Mounts extraVolumes specified for snmp-exporter pod. Can use projected volumes to mounts multiple configMaps into same directory
+  extraVolumeMounts: []
+  #- name: projeted-volume
+  #  mountPath: "/etc/configuration"
+  #  readOnly: true
 
   ## configmap-reload container image
   ##
