remove debugging comments
Signed-off-by: boxstep <evaldas.blauzdziunas@hotmail.com>

--- a/charts/prometheus-snmp-exporter/templates/deployment.yaml
+++ b/charts/prometheus-snmp-exporter/templates/deployment.yaml
@@ -94,7 +94,7 @@ spec:
           {{- with .Values.extraVolumeMounts }}
           {{ toYaml . | nindent 12 }}
           {{- end }}
-      {{- if .Values.configmapReload.enabled }} #adding
+      {{- if .Values.configmapReload.enabled }}
         - name: configmap-reload
           image: "{{ .Values.configmapReload.image.repository }}:{{ .Values.configmapReload.image.tag }}"
           imagePullPolicy: "{{ .Values.configmapReload.image.pullPolicy }}"
@@ -109,12 +109,12 @@ spec:
           resources:
 {{ toYaml .Values.configmapReload.resources | indent 12 }}
           volumeMounts:
-           {{ if .Values.config }} #adding
+           {{ if .Values.config }}
             - mountPath: /etc/config
               name: config
               readOnly: true
            {{- end }}
-          {{- with .Values.configmapReload.extraVolumeMounts }} #adding
+          {{- with .Values.configmapReload.extraVolumeMounts }}
           {{ toYaml . | nindent 12 }}
           {{- end }}
       {{- end }}
