Removing one more debugging line
Signed-off-by: boxstep <evaldas.blauzdziunas@hotmail.com>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -128,8 +128,8 @@ ingress:
 
 podAnnotations: {}
 
-extraArgs:
-- "--config.file=/etc/configuration/*.yml"
+extraArgs: []
+#  --history.limit=1000
 
 envFrom: []
 #  - secretRef:
