Fixing missing if closing, and changing reloader to default enabled:false status
Signed-off-by: boxstep <evaldas.blauzdziunas@hotmail.com>

--- a/charts/prometheus-snmp-exporter/templates/deployment.yaml
+++ b/charts/prometheus-snmp-exporter/templates/deployment.yaml
@@ -113,6 +113,7 @@ spec:
             - mountPath: /etc/config
               name: config
               readOnly: true
+          {{- end }}
           {{- with .Values.configmapReload.extraVolumeMounts }}
           {{ toYaml . | nindent 12 }}
           {{- end }}
