--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -146,7 +146,7 @@ replicas: 1
 configmapReload:
   ## configmap-reload container name
   ##
-  enabled: true
+  enabled: false
   name: configmap-reload
 
   extraArgs: []
