Remove global imageRegistry and update templates
Backward compatibility not introducing breaking change

Signed-off-by: Slawomir Skowron <329831+szibis@users.noreply.github.com>

--- a/charts/prometheus-yet-another-cloudwatch-exporter/values.yaml
+++ b/charts/prometheus-yet-another-cloudwatch-exporter/values.yaml
@@ -2,12 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-global:
-  imageRegistry: "quay.io"
-
 replicaCount: 1
 
 image:
+  registry: quay.io
   repository: prometheuscommunity/yet-another-cloudwatch-exporter
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
