Change flag es.slm to collector.slm
The flag --es.slm has been renamed to --collector.slm in release v1.9

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
@@ -107,7 +107,7 @@ spec:
                     "--collector.clustersettings",
                     {{- end }}
                     {{- if .Values.es.slm }}
-                    "--es.slm",
+                    "--collector.slm",
                     {{- end }}
                     {{- if .Values.es.data_stream }}
                     "--es.data_stream",
