--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -162,6 +162,9 @@ spec:
   configMaps:
 {{ tpl (toYaml .Values.prometheus.prometheusSpec.configMaps) . | indent 4 }}
 {{- end }}
+{{- if .Values.prometheus.prometheusSpec.serviceName }}
+  serviceName: {{.Values.prometheus.prometheusSpec.serviceName }}
+{{- end }}
   serviceAccountName: {{ template "kube-prometheus-stack.prometheus.serviceAccountName" . }}
 {{- if .Values.prometheus.prometheusSpec.serviceMonitorSelector }}
   serviceMonitorSelector:
