Add support for basicAuth in ServiceMonitor
Signed-off-by: jiaxinonly <1094630886@qq.com>

--- a/charts/prometheus-pushgateway/templates/secret.yaml
+++ b/charts/prometheus-pushgateway/templates/secret.yaml
@@ -8,3 +8,14 @@ metadata:
 data:
   web-config.yaml: {{ include "prometheus-pushgateway.webConfiguration" . | b64enc}}
 {{- end }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "prometheus-pushgateway.fullname" . }}-basic-auth
+  labels:
+    {{- include "prometheus-pushgateway.defaultLabels" . | nindent 4 }}
+data:
+  {{- include "prometheus-pushgateway.basicAuth" . | nindent 2 }}
+type: Opaque
+{{- end }}
