[ci] use own renovate helper app to bump chart versions
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
     "helpers:pinGitHubActionDigestsToSemver"
   ],
   "dependencyDashboardApproval": true,
+  "bumpVersion": "patch",
   "customManagers": [
     {
       "customType": "regex",
