--- a/.github/workflows/renovate-bump-chart-version.yaml
+++ b/.github/workflows/renovate-bump-chart-version.yaml
@@ -50,8 +50,8 @@ jobs:
           CHART: ${{ steps.list-changed.outputs.changed_list }}
         #language=bash
         run: |
-          if [[ ! -d "$CHART" ]]; then
-            echo "$CHART directory not found"
+          if [[ ! -d "${CHART}" ]]; then
+            echo "${CHART} directory not found"
             exit 0
           fi
 
