[prometheus-pingdom-exporter] add support for set arguments
Signed-off-by: Julliano Goncalves <julliano.goncalves@liferay.com>

--- a/charts/prometheus-pingdom-exporter/values.yaml
+++ b/charts/prometheus-pingdom-exporter/values.yaml
@@ -42,6 +42,13 @@ affinity: {}
 pingdom:
   apiToken: "YourPingdomApiToken"
 
+# Additional settings for the exporter.
+# Ref: https://github.com/kokuwaio/pingdom-exporter?tab=readme-ov-file#usage
+config:
+  defaultUptimeSLO: 99
+  outageCheckPeriodInDays: 7
+  tags: []
+
 pod:
   annotations: {}
     # key: "true"
