[CI] Enable renovate for all charts
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -64,7 +64,7 @@
     {
       "enabled": true,
       "matchFileNames": [
-        "charts/kube-prometheus-stack/**"
+        "charts/**"
       ],
       "commitMessagePrefix": "[{{ lookup (split packageFileDir '/') 1 }}] ",
       "groupName": "{{ lookup (split packageFileDir '/') 1 }} dependency non-major updates",
