[renovate] Exclude images references with values.
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -37,7 +37,7 @@
         "(^|/).+\\.yaml$"
       ],
       "matchStrings": [
-        "\\s*image:\\s+[\\\"']?(?<registry>.+\\..+?)\\/(?<repository>.*?):(?<currentValue>[\\w+\\.\\-]*)(?:@(?<currentDigest>sha256:[a-f0-9]+))?[\\\"']?"
+        "\\s*image:\\s+[\\\"']?(?<registry>[^{]+\\..+?)\\/(?<repository>.*?):(?<currentValue>[\\w+\\.\\-]*)(?:@(?<currentDigest>sha256:[a-f0-9]+))?[\\\"']?"
       ],
       "depNameTemplate": "{{{ registry }}}/{{{ repository }}}",
       "datasourceTemplate": "docker"
