--- a/renovate.json
+++ b/renovate.json
@@ -26,7 +26,7 @@
         "(^|/).+\\.yaml$"
       ],
       "matchStrings": [
-        "[\\t ]*image:\\s+registry:\\s*[\\\"']?(?<registry>\\S+\\.\\S+?)[\\\"']?[\\t ]*\\r?\\n[\\t ]*(?:repository|name):\\s*[\\\"']?(?<repository>.*?)[\\\"']?[\\t ]*\\r?\\n[\\t ]*tag:\\s*[\\\"']?(?<currentValue>[\\w+\\.\\-]*)(?:@(?<currentDigest>sha256:[a-f0-9]+))?[\\\"']?",
+        "[\\t ]*image:\\s+registry:\\s*[\\\"']?(?<registry>\\S+\\.\\S+?)[\\\"']?[\\t ]*\\r?\\n[\\t ]*(?:repository|name):\\s*[\\\"']?(?<repository>.*?)[\\\"']?[\\t ]*\\r?\\n[\\t ]*tag:\\s*[\\\"']?(?<currentValue>[\\w+\\.\\-]*)(?:@(?<currentDigest>sha256:[a-f0-9]+))?[\\\"']?"
       ],
       "depNameTemplate": "{{{ registry }}}/{{{ repository }}}",
       "datasourceTemplate": "docker"
