[ci] Set automatic schedule and remove manually approve
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,8 @@
     "config:recommended",
     "helpers:pinGitHubActionDigestsToSemver"
   ],
-  "dependencyDashboardApproval": true,
+  "schedule": ["* 16 * * 5"],
+  "dependencyDashboardApproval": false,
   "bumpVersion": "patch",
   "customManagers": [
     {
