[prometheus-systemd-exporter] allow setting unit-include
Signed-off-by: Andres Alvarez <1671935+kir4h@users.noreply.github.com>

--- a/charts/prometheus-systemd-exporter/values.yaml
+++ b/charts/prometheus-systemd-exporter/values.yaml
@@ -51,7 +51,8 @@ env: {}
 ##    VARIABLE: value
 
 # extraArgs allows to pass command line arguments, as described on https://github.com/prometheus-community/systemd_exporter?tab=readme-ov-file#configuration
-extraArgs: []
+extraArgs:
+  - --systemd.collector.unit-include=kubelet.service|docker.service
 # - --systemd.collector.enable-resolved
 
 prometheus:
