[kube-prometheus-stack] allow extraManifests as map/list
Signed-off-by: TheRealNoob <mike1118@live.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -5300,8 +5300,10 @@ thanosRuler:
 ##
 cleanPrometheusOperatorObjectNames: false
 
-## Extra manifests to deploy as an array
-extraManifests: []
+## Extra manifests to deploy.  Can be of type map or slice.
+## If slice, keys are ignored and only values are used.
+## Items contained within extraObjects can be defined as dict or string and are passed through tpl.
+extraManifests: null
   # - apiVersion: v1
   #   kind: ConfigMap
   #   metadata:
