--- a/charts/alertmanager-snmp-notifier/Chart.yaml
+++ b/charts/alertmanager-snmp-notifier/Chart.yaml
@@ -5,14 +5,12 @@ home: https://github.com/maxwo/snmp_notifier
 sources:
   - https://github.com/maxwo/snmp_notifier
 type: application
-version: 0.4.0
+deprecated: true
+version: 0.4.1
 appVersion: v1.6.0
 keywords:
   - monitoring
-maintainers:
-  - name: maxwo
-    email: maxime.wojtczak.pub@icloud.com
-    url: https://github.com/maxwo
+maintainers: []
 annotations:
   "artifacthub.io/links": |
     - name: Chart Source
