--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -5301,7 +5301,7 @@ thanosRuler:
 cleanPrometheusOperatorObjectNames: false
 
 ## Extra manifests to deploy.  Can be of type map or slice.
-## If slice, keys are ignored and only values are used.
+## If map, keys are ignored and only values are used.
 ## Items contained within extraObjects can be defined as dict or string and are passed through tpl.
 extraManifests: null
   # - apiVersion: v1
