add tests & examples
Signed-off-by: TheRealNoob <mike1118@live.com>

--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -1,5 +1,9 @@
 # this file tests some non default values to increase the test coverage
 
+commonLabels:
+  foo: one
+  bar: two
+
 defaultRules:
   additionalRuleLabels:
     key: value
@@ -93,3 +97,25 @@ nodeExporter:
 prometheus-node-exporter:
   kubeRBACProxy:
     enabled: true
+
+extraObjects:
+  - apiVersion: v1
+    kind: ConfigMap
+    metadata:
+      name: test-cm
+    data:
+      plaintext: foobar
+      templated: '{{ print "foobar" | upper }}'
+  - |
+    apiVersion: v1
+    kind: Secret
+    type: Opaque
+    metadata:
+      name: test-secret
+      labels:
+        {{- range $key, $value := .Values.commonLabels }}
+        {{ $key: $value }}
+        {{- end }}
+    data:
+      plaintext: Zm9vYmFy
+      templated: '{{ print "foobar" | upper | b64enc }}'
