--- a/charts/kube-prometheus-stack/ci/05-ingress-and-gateway-routes-values.yaml
+++ b/charts/kube-prometheus-stack/ci/05-ingress-and-gateway-routes-values.yaml
@@ -88,3 +88,22 @@ thanosRuler:
             - path:
                 type: PathPrefix
                 value: /foo/
+
+extraObjects:
+  configmap:
+    apiVersion: v1
+    kind: ConfigMap
+    metadata:
+      name: test-cm
+    data:
+      plaintext: foobar
+      templated: '{{ print "foobar" | upper }}'
+  secret: |
+    apiVersion: v1
+    kind: Secret
+    type: Opaque
+    metadata:
+      name: test-secret
+    data:
+      plaintext: Zm9vYmFy
+      templated: '{{ print "foobar" | upper | b64enc }}'
