--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -114,7 +114,7 @@ extraObjects:
       name: test-secret
       labels:
         {{- range $key, $value := .Values.commonLabels }}
-        {{ $key: $value }}
+        {{ $key }}: {{ $value }}
         {{- end }}
     data:
       plaintext: Zm9vYmFy
