--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -5321,7 +5321,7 @@ extraManifests: null
   #     name: super-secret
   #     labels:
   #       {{- range $key, $value := .Values.commonLabels }}
-  #       {{ $key: $value }}
+  #       {{ $key }}: {{ $value }}
   #       {{- end }}
   #   data:
   #     plaintext: Zm9vYmFy
