--- a/charts/prometheus-pingdom-exporter/values.yaml
+++ b/charts/prometheus-pingdom-exporter/values.yaml
@@ -49,6 +49,8 @@ config:
   defaultUptimeSLO: 99
   outageCheckPeriodInDays: 7
   tags: []
+  parserTags: false
+  tagFormat:
 
 pod:
   annotations: {}
