--- a/charts/prometheus-nginx-exporter/templates/service.yaml
+++ b/charts/prometheus-nginx-exporter/templates/service.yaml
@@ -12,6 +12,9 @@ metadata:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  {{- if ne .Values.service.externalTrafficPolicy "Cluster" }}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
+  {{- end }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
