--- a/charts/prometheus-nginx-exporter/templates/service.yaml
+++ b/charts/prometheus-nginx-exporter/templates/service.yaml
@@ -12,7 +12,7 @@ metadata:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
-  {{- if ne .Values.service.externalTrafficPolicy "Cluster" }}
+  {{- if .Values.service.externalTrafficPolicy }}
   externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
   {{- end }}
   ports:
