--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -58,7 +58,7 @@ service:
   port: 9113
   annotations: {}
   # External traffic policy setting (Cluster, Local)
-  externalTrafficPolicy: Cluster
+  externalTrafficPolicy: ""
 
 podAnnotations: {}
 
