--- a/charts/prometheus-windows-exporter/Chart.yaml
+++ b/charts/prometheus-windows-exporter/Chart.yaml
@@ -7,7 +7,8 @@ keywords:
   - prometheus
   - exporter
 type: application
-version: 0.9.1
+version: 0.9.2
+# renovate: github=prometheus-community/windows_exporter
 appVersion: 0.30.5
 home: https://github.com/prometheus-community/windows_exporter/
 sources:
