allow templating serviceaccount annotation values
Signed-off-by: Fernando Crespo Gravalos <fcrespo@fastly.com>

--- a/charts/prometheus-yet-another-cloudwatch-exporter/values.yaml
+++ b/charts/prometheus-yet-another-cloudwatch-exporter/values.yaml
@@ -20,7 +20,7 @@ serviceAccount:
   create: true
   # -- Labels to add to the service account
   labels: {}
-  # -- Annotations to add to the service account
+  # -- Annotations to add to the service account. Keys and values can be templated, as an example: "{{ .Values.foo }}: {{ .Values.bar }}"
   annotations: {}
   # -- The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
