deplopying grafana and prometheus using helm chart

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -1304,3 +1304,17 @@ prometheus-pushgateway:
   # Optional service annotations
   serviceAnnotations:
     prometheus.io/probe: pushgateway
+
+## Grafana and prometheus values
+grafana:
+  enabled: true
+  adminUser: admin
+
+prometheus:
+  prometheusSpec:
+    retention: 7d
+    serviceMonitorSelectorNilUsesHelmValues: false
+
+alertmanager:
+  enabled: true
+  
