Extend basicAuth in servicemonitor
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-pushgateway/templates/secret.yaml
+++ b/charts/prometheus-pushgateway/templates/secret.yaml
@@ -7,21 +7,17 @@ metadata:
     {{- include "prometheus-pushgateway.defaultLabels" . | nindent 4 }}
 data:
   web-config.yaml: {{ include "prometheus-pushgateway.webConfiguration" . | b64enc}}
+{{- end }}
 ---
-{{- if and .Values.serviceMonitor.enabled  (not .Values.serviceMonitor.basicAuth.existingSecret) }}
+{{- if and (and .Values.webConfiguration .Values.serviceMonitor.enabled) (empty .Values.serviceMonitor.basicAuth) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "prometheus-pushgateway.fullname" . }}-basic-auth
-  {{- if .Values.serviceMonitor.namespace }}
-  namespace: {{ .Values.serviceMonitor.namespace }}
-  {{- else }}
-  namespace: {{ template "prometheus-pushgateway.namespace" . }}
-  {{- end }}
+  namespace: {{ default (include "prometheus-pushgateway.namespace" .) .Values.serviceMonitor.namespace }}
   labels:
     {{- include "prometheus-pushgateway.defaultLabels" . | nindent 4 }}
 data:
   {{- include "prometheus-pushgateway.basicAuth" . | nindent 2 }}
 type: Opaque
-{{- end }}
 {{- end }}
