--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -257,18 +257,24 @@ serviceMonitor:
   telemetryPath: "/metrics"
 
   # Fallback to the prometheus default unless specified
-  # interval: 10s
+  interval: ""
 
   ## scheme: HTTP scheme to use for scraping. Can be used with `tlsConfig` for example if using istio mTLS.
-  # scheme: ""
+  scheme: ""
+
+  ## Basic authentication
+  basicAuth: {}
+
+  ## Bearer token file
+  bearerTokenFile: ""
 
   ## tlsConfig: TLS configuration to use when scraping the endpoint. For example if using istio mTLS.
   ## Of type: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#tlsconfig
-  # tlsConfig: {}
+  tlsConfig: {}
 
   # bearerTokenFile:
   # Fallback to the prometheus default unless specified
-  # scrapeTimeout: 30s
+  scrapeTimeout: ""
 
   ## Used to pass Labels that are used by the Prometheus installed in your cluster to select Service Monitors to work with
   ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#prometheusspec
