Add comment to webConfiguration
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -110,6 +110,8 @@ resources: {}
 
 # -- Sets web configuration
 # To enable basic authentication, provide basicAuthUsers as a map
+# If serviceMonitor.enabled is set, a secret with these credentials will be created
+# and configured in serviceMonitor. serviceMonitor.basicAuth overrides this secret.
 webConfiguration: {}
   # basicAuthUsers:
   #   username: password
