Make the revisions as suggested.
Signed-off-by: jiaxinonly <1094630886@qq.com>

--- a/charts/prometheus-pushgateway/templates/secret.yaml
+++ b/charts/prometheus-pushgateway/templates/secret.yaml
@@ -7,15 +7,21 @@ metadata:
     {{- include "prometheus-pushgateway.defaultLabels" . | nindent 4 }}
 data:
   web-config.yaml: {{ include "prometheus-pushgateway.webConfiguration" . | b64enc}}
-{{- end }}
 ---
+{{- if and .Values.serviceMonitor.enabled  (not .Values.serviceMonitor.basicAuth.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "prometheus-pushgateway.fullname" . }}-basic-auth
+  {{- if .Values.serviceMonitor.namespace }}
+  namespace: {{ .Values.serviceMonitor.namespace }}
+  {{- else }}
+  namespace: {{ template "prometheus-pushgateway.namespace" . }}
+  {{- end }}
   labels:
     {{- include "prometheus-pushgateway.defaultLabels" . | nindent 4 }}
 data:
   {{- include "prometheus-pushgateway.basicAuth" . | nindent 2 }}
 type: Opaque
+{{- end }}
 {{- end }}
