Correct conditional in secret
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-pushgateway/templates/secret.yaml
+++ b/charts/prometheus-pushgateway/templates/secret.yaml
@@ -9,7 +9,7 @@ data:
   web-config.yaml: {{ include "prometheus-pushgateway.webConfiguration" . | b64enc}}
 {{- end }}
 ---
-{{- if and (and .Values.webConfiguration .Values.serviceMonitor.enabled) (empty .Values.serviceMonitor.basicAuth) }}
+{{- if and .Values.webConfiguration .Values.serviceMonitor.enabled (empty .Values.serviceMonitor.basicAuth) }}
 apiVersion: v1
 kind: Secret
 metadata:
