--- a/charts/prometheus-node-exporter/Chart.yaml
+++ b/charts/prometheus-node-exporter/Chart.yaml
@@ -6,7 +6,8 @@ keywords:
   - prometheus
   - exporter
 type: application
-version: 4.45.0
+version: 4.45.1
+# renovate: github=prometheus-community/node_exporter
 appVersion: 1.9.0
 home: https://github.com/prometheus/node_exporter/
 sources:
