[prometheus-pingdom-exporter] Updating version and adding new arguments
Signed-off-by: Julliano Goncalves <julliano.goncalves@liferay.com>

--- a/charts/prometheus-pingdom-exporter/templates/deployment.yaml
+++ b/charts/prometheus-pingdom-exporter/templates/deployment.yaml
@@ -43,6 +43,10 @@ spec:
             - "-tag-format"
             - {{ .tagFormat | quote }}
             {{- end }}
+            {{- if gt (len .tagExtraLabels ) 0 }}
+            - "-tag-extra-labels"
+            - {{ join "," .tagExtraLabels | quote }}
+            {{- end }}
             {{- end }}
             {{- end }}
             {{- end }}
