added custom namespace for alertmanager
Signed-off-by: Mohamed Shafiq <mohamed.shafiq@elastisys.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -391,6 +391,9 @@ alertmanager:
   ## Deploy alertmanager
   ##
   enabled: true
+  
+  # Optional: Override the namespace where Alertmanager will be deployed. 
+  namespaceOverride: ""
 
   ## Annotations for Alertmanager
   ##
