--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -242,7 +242,7 @@ prometheus:
   ## Create a scrapeConfig resource for scraping the kube-state-metrics service. Use this instead of serviceMonitor
   ## to have more instances of kube-state-metrics safety.
   scrapeconfig:
-    ## To avoid duplicate metrics, first disable the serviveMonitor creation via prometheus.monitor.enabled=false
+    ## To avoid duplicate metrics, first disable the serviceMonitor creation via prometheus.monitor.enabled=false
     enabled: false
     annotations: {}
     additionalLabels: {}
