--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -8,7 +8,7 @@ nameOverride: ""
 
 ## Override the deployment namespace
 ##
-namespaceOverride: ""
+namespaceOverride: "monitoring"
 
 ## Provide a k8s version to auto dashboard import script example: kubeTargetVersionOverride: 1.26.6
 ##
@@ -392,7 +392,7 @@ alertmanager:
   ##
   enabled: true
   
-  # Optional: Override the namespace where Alertmanager will be deployed. 
+  # Optional: Override the namespace where Alertmanager will be deployed.
   namespaceOverride: ""
 
   ## Annotations for Alertmanager
