[prometheus-operator-crds] add opt-out for CRDs
This change adds an opt-out mechanism for CRDs so only the CRDs needed
for the cluster are installed (e.g. only pod- and servicemonitors for
setups using Mimir).

Resolves: https://github.com/prometheus-community/helm-charts/issues/3860
Signed-off-by: Simon Berz <simon@berz.me>

--- a/charts/prometheus-operator-crds/values.yaml
+++ b/charts/prometheus-operator-crds/values.yaml
@@ -2,3 +2,24 @@
 ##
 crds:
   annotations: {}
+
+  alertmanagerconfigs:
+    enabled: true
+  alertmanagers:
+    enabled: true
+  podmonitors:
+    enabled: true
+  probes:
+    enabled: true
+  prometheusagents:
+    enabled: true
+  prometheuses:
+    enabled: true
+  prometheusrules:
+    enabled: true
+  scrapeconfigs:
+    enabled: true
+  servicemonitors:
+    enabled: true
+  thanosrulers:
+    enabled: true
