--- a/charts/prometheus-operator-admission-webhook/templates/validatingWebhookConfiguration.yaml
+++ b/charts/prometheus-operator-admission-webhook/templates/validatingWebhookConfiguration.yaml
@@ -22,7 +22,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
     {{- end }}
 webhooks:
-  {{- if .Values.webhooks.enabled.prometheusrulevalidate }}
+  {{- if .Values.webhooks.enabled.prometheusruleValidate }}
   - name: prometheusrulevalidate.monitoring.coreos.com
     failurePolicy: {{ default "Fail" .Values.webhooks.failurePolicy }}
     {{- with .Values.webhooks.namespaceSelector }}
