Apply suggestions from code review
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: TheRealNoob <TheRealNoob@users.noreply.github.com>

--- a/charts/prometheus-operator-admission-webhook/templates/validatingWebhookConfiguration.yaml
+++ b/charts/prometheus-operator-admission-webhook/templates/validatingWebhookConfiguration.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.webhooks.enabled.prometheusrulevalidate .Values.webhooks.enabled.alertmanagerconfigsvalidate }}
+{{- if or .Values.webhooks.enabled.prometheusruleValidate .Values.webhooks.enabled.alertmanagerconfigsValidate }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
@@ -51,7 +51,7 @@ webhooks:
     admissionReviewVersions: ["v1", "v1beta1"]
     sideEffects: None
   {{- end }}
-  {{- if .Values.webhooks.enabled.alertmanagerconfigsvalidate }}
+  {{- if .Values.webhooks.enabled.alertmanagerconfigsValidate }}
   - name: alertmanagerconfigsvalidate.monitoring.coreos.com
     failurePolicy: {{ default "Fail" .Values.webhooks.failurePolicy }}
     {{- with .Values.webhooks.namespaceSelector }}
