--- a/charts/prometheus-operator-admission-webhook/templates/mutatingWebhookConfiguration.yaml
+++ b/charts/prometheus-operator-admission-webhook/templates/mutatingWebhookConfiguration.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.webhooks.enabled.prometheusrulemutate }}
+{{- if .Values.webhooks.enabled.prometheusruleMutate }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
