--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -22,9 +22,9 @@ kubeVersionOverride: ""
 ## see https://prometheus-operator.dev/docs/user-guides/webhook/#converting-alertmanagerconfig-resources
 webhooks:
   enabled:
-    prometheusrulevalidate: true
-    alertmanagerconfigsvalidate: true
-    prometheusrulemutate: true
+    prometheusruleValidate: true
+    alertmanagerconfigsValidate: true
+    prometheusruleMutate: true
 
   failurePolicy: Fail
   timeoutSeconds: 10
