--- a/charts/prometheus-operator-admission-webhook/templates/mutatingWebhookConfiguration.yaml
+++ b/charts/prometheus-operator-admission-webhook/templates/mutatingWebhookConfiguration.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.webhooks.enabled.prometheusruleMutate }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
@@ -48,3 +49,4 @@ webhooks:
     timeoutSeconds: {{ default 10 .Values.webhooks.timeoutSeconds }}
     admissionReviewVersions: ["v1", "v1beta1"]
     sideEffects: None
+{{- end }}
