--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -21,6 +21,11 @@ kubeVersionOverride: ""
 ## For info on converting Alertmanagerconfigs,
 ## see https://prometheus-operator.dev/docs/user-guides/webhook/#converting-alertmanagerconfig-resources
 webhooks:
+  enabled:
+    prometheusruleValidate: true
+    alertmanagerconfigsValidate: true
+    prometheusruleMutate: true
+
   failurePolicy: Fail
   timeoutSeconds: 10
   namespaceSelector: {}
