add renovate hint for conntrack-stats-exporter
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-conntrack-stats-exporter/Chart.yaml
+++ b/charts/prometheus-conntrack-stats-exporter/Chart.yaml
@@ -2,7 +2,8 @@ apiVersion: v2
 name: prometheus-conntrack-stats-exporter
 description: A Helm chart for conntrack-stats-exporter
 type: application
-version: 0.5.17
+version: 0.5.18
+# renovate: github=jwkohnen/conntrack-stats-exporter
 appVersion: v0.4.26
 home: https://github.com/jwkohnen/conntrack-stats-exporter
 sources:
