[prometheus-smartctl-exporter] allow config of updateStrategy and prom metricsRelabeling
Signed-off-by: Brien Dieterle <briend@terascope.io>

--- a/charts/prometheus-smartctl-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/daemonset.yaml
@@ -17,10 +17,9 @@ metadata:
     {{- include "prometheus-smartctl-exporter.labels" $global | nindent 4 }}
     idx: i{{ $idx }}
 spec:
-  updateStrategy:
-    rollingUpdate:
-      maxUnavailable: 1
-    type: RollingUpdate
+  {{- with $global.Values.updateStrategy }}
+  updateStrategy: {{ toYaml . | nindent 4 }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "prometheus-smartctl-exporter.selectorLabels" $global | nindent 6 }}
