--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -29,6 +29,7 @@ serviceMonitor:
   scrapeTimeout: 30s
   # Set relabel_configs as per https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
   relabelings: []
+  metricRelabelings: []
 
 prometheusRules:
   enabled: false
@@ -44,6 +45,11 @@ image:
   tag: ""
   pullPolicy: IfNotPresent
   pullSecrets: []
+
+updateStrategy:
+  rollingUpdate:
+    maxUnavailable: 1
+  type: RollingUpdate
 
 serviceAccount:
   # Specifies whether a service account should be created
