--- a/charts/prometheus-smartctl-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/servicemonitor.yaml
@@ -21,6 +21,9 @@ spec:
 {{- with .Values.serviceMonitor.relabelings }}
       relabelings: {{ toYaml . | nindent 8 }}
 {{- end }}
+{{- with .Values.serviceMonitor.metricRelabelings }}
+      metricRelabelings: {{ toYaml . | nindent 8 }}
+{{- end }}
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace }}
