use dict for rules
Signed-off-by: Artyom Babiy <artyom.babiy@gmail.com>

--- a/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
@@ -15,10 +15,7 @@ spec:
   groups:
     - name: {{ template "prometheus-smartctl-exporter.name" $ }}
       rules:
-      {{- with .Values.prometheusRules.defaultRules }}
-        {{- tpl (toYaml .) $ | nindent 8 }}
-      {{- end }}
-      {{- with .Values.prometheusRules.customRules }}
-        {{- tpl (toYaml .) $ | nindent 8 }}
+      {{- range .Values.prometheusRules.rules }}
+        - {{ toYaml . | nindent 10 | trim }}
       {{- end }}
 {{- end }}
